--- a/package.json
+++ b/package.json
@@ -2,8 +2,15 @@
   "name": "ac-remote-telemetry-client",
   "version": "0.1.0",
   "description": "A Node UDP client and telemetry parser for Assetto Corsa",
-  "main": "src/index.js",
+  "main": "lib/index.js",
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
+  },
   "scripts": {
+    "build": "babel src --presets babel-preset-es2015 --out-dir lib",
+    "prepublishOnly": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -36,5 +43,9 @@
   "bugs": {
     "url": "https://github.com/rickwest/ac-remote-telemetry-client/issues"
   },
-  "homepage": "https://github.com/rickwest/ac-remote-telemetry-client#readme"
+  "homepage": "https://github.com/rickwest/ac-remote-telemetry-client#readme",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1"
+  }
 }
