--- a/package.json
+++ b/package.json
@@ -49,7 +49,10 @@
   "homepage": "https://github.com/rickwest/ac-remote-telemetry-client#readme",
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1"
+    "babel-preset-es2015": "^6.24.1",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2"
   },
   "dependencies": {
     "binary-parser": "^1.6.2"
